# brave-core

./: DEPS  package-lock.json  package.json
app/: BUILD.gn  brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc
browser/: brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  brave_profile_prefs_browsertest.cc  brave_tab_helpers.cc
browser/extensions/: BUILD.gn
browser/greaselion/: greaselion_browsertest.cc  greaselion_tab_helper.cc
browser/net/: url_context.h
browser/tor/: tor_navigation_throttle_unittest.cc
browser/ui/: BUILD.gn
common/: BUILD.gn  pref_names.cc
components/brave_new_tab_ui/: brave_new_tab.tsx
components/brave_sync/: bookmark_order_util.cc  bookmark_order_util.h  bookmark_order_util_unittest.cc
components/definitions/: chromel.d.ts  rewards.d.ts  rewardsTip.d.ts
components/playlists/: buildflags.gni
components/playlists/browser/: BUILD.gn  playlists_controller.cc  playlists_controller.h  playlists_controller_observer.h  playlists_service.cc  playlists_service.h  playlists_service_factory.cc  playlists_service_factory.h  playlists_types.cc  playlists_types.h
components/resources/: brave_components_strings.grd
patches/: chrome-browser-ui-bookmarks-bookmark_tab_helper.cc.patch  chrome-browser-ui-browser.cc.patch  components-content_settings-core-browser-content_settings_registry.cc.patch  extensions-browser-extension_event_histogram_value.h.patch
services/network/: BUILD.gn  brave_cookie_settings.cc  brave_cookie_settings.h
test/: BUILD.gn
(+91 files in other folders)
